# TheGoldMod_ue4ss

./: .gitignore  BLUEPRINT_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CRASH_PLAN.md  LICENSE  README.md  settings.txt
Scripts/: diagnostics.lua  dna_system.lua  extractor_tool.lua  main.lua  transformation.lua
TheGoldModSettings/: CMakeLists.txt  dllmain.cpp
release/TheGoldMod/: README.md  settings.txt
release/TheGoldMod/Scripts/: creature_db.lua  investigation.lua  main.lua  traits.lua  transformation.lua  wheel_bridge.lua
